Formatted code using google code style for java