@@ -1,1 +1,14 @@
+--add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 -XX:CICompilerCount=1 -XX:TieredStopAtLevel=1 -Djava.security.egd=file:/dev/./urandom
